// $Id$
// $Name$

Image Picker  for D7 in DRUPAL-7--1, 20010-09-03
------------------------------------
by hutch, fixed issue #895308, replace file_directory_path()

Image Picker  for D7 in DRUPAL-7--1, 20010-07-10
------------------------------------
by hutch, minor cleanup and bugfixes to menu

Image Picker  for D7 in DRUPAL-7--1, 20010-06-13
------------------------------------
by hutch, initial release for Drupal 7

Image Picker  for D6 in DRUPAL-6--2, 20010-06-09
------------------------------------
by hutch, added class imgp_img to inserted image
replaced split() with explode()

Image Picker  for D6 in DRUPAL-6--2, 20010-05-15
------------------------------------
by hutch, added public select box,
changed hidden formfields to 'value'

Image Picker  for D6 in DRUPAL-6--2, 20010-05-14
------------------------------------
by hutch, added external hook 'imagepicker_upload_extra'

Image Picker  for D6 in DRUPAL-6--2, 20010-05-13
------------------------------------
by hutch, fixed issues in #796524, #797612, added icons to admin/groups

Image Picker  for D6 in DRUPAL-6--2, 20010-05-11
------------------------------------
by hutch, added suggested improvement, issue #795346

Image Picker  for D6 in DRUPAL-6--2, 20010-04-28
------------------------------------
by hutch, added support for Colorbox iframe

Image Picker  for D6 in DRUPAL-6--2, 20010-04-24
------------------------------------
by hutch, added support for Colorbox module

Image Picker  for D6 in DRUPAL-6--2, 20010-02-25
------------------------------------
by hutch, Drupal.behaviors applied to js

Image Picker  for D6 in DRUPAL-6--2, 20010-02-17
------------------------------------
by hutch, fixed bug in admin watermarks validation

Image Picker  for D6 in DRUPAL-6--2, 20010-02-13
------------------------------------
by hutch, added icons

Image Picker  for D6 in DRUPAL-6--2, 20010-01-17
------------------------------------
by hutch, E_NOTICE fixes

Image Picker  for D6 in DRUPAL-6--2, 20010-01-16