@@ -190,7 +190,7 @@ function theme_imagepicker($variables) {
         'default_fright' => (isset($user->data['imagepicker_default_fright']) ? $user->data['imagepicker_default_fright'] : variable_get('imagepicker_default_fright', 'style="float: right"')),
         'lightbox2_enable' => (module_exists('lightbox2') && variable_get('imagepicker_lightbox2_enable', 1)),
         'lightbox2_insert' => (isset($user->data['imagepicker_lightbox2_insert']) ? $user->data['imagepicker_lightbox2_insert'] : variable_get('imagepicker_lightbox2_insert', 'lightbox')),
-        'thickbox_enable' => (module_exists('thickbox') && variable_get('imagepicker_thickbox_enable', 1)),
+        'colorbox_enable' => (module_exists('colorbox') && variable_get('imagepicker_colorbox_enable', 0)),
         'node_editbody' => 'edit-body-' . variable_get('imagepicker_node_lang', '') . '-' . variable_get('imagepicker_node_pos', 0) . '-value',
       ),
     );
